--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -250,7 +250,7 @@
         <activity
             android:name=".learning_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" />
-       
+
         <activity
             android:name=".home.activity.EduSpaceActivity"
             android:exported="false" />
@@ -292,13 +292,8 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.settingedu.SettingFontActivity"
-            android:exported="true"> <!-- 계정생성 교육 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 계정생성 -->
+            android:exported="false"/> <!-- 계정생성 교육 -->
+            <!-- 계정생성 -->
         <activity
             android:name=".learning_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -328,13 +323,8 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.appinstall.AppInstallMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 병윤님 앱 설치 메인 화면 -->
+            android:exported="false"/>
+            <!-- 병윤님 앱 설치 메인 화면 -->
         <activity
             android:name=".learning_space.appinstall.AppInstallSearchActivity"
             android:exported="false" />
