--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,11 +114,7 @@
         <activity
             android:name=".home.activity.LoginActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity
             android:name=".profile_space.CheckLearningAbilityActivity"
@@ -135,11 +131,7 @@
         <activity
             android:name=".training_space.activity.ExamProblemActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity
             android:name=".training_space.screen.PracticeRecentlyDefaultActivity"
@@ -204,11 +196,7 @@
         <activity
             android:name=".training_space.NewScreenPracticeActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity> <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".home.activity.FindIdPasswordActivity"
@@ -362,7 +350,7 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.naver.activity.NaverActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".learning_space.naver.activity.NaverSearchInfoActivity"
             android:exported="false" />
