--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".training_space.activity.ChooseTypeActivity"
+            android:exported="false" />
+        <activity
             android:name=".training_space.google.PracticeGoogle8Activity"
             android:exported="false" />
         <activity
@@ -41,8 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".training_space.google.PracticeGoogleActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".training_space.setting.PracticeSettingFontActivity"
             android:exported="false" />
@@ -156,8 +158,7 @@
             android:exported="true" />
         <activity
             android:name=".home.activity.LoginActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".profile_space.CheckLearningAbilityFragment"
             android:exported="true" />
@@ -172,9 +173,7 @@
         </activity>
         <activity
             android:name=".training_space.activity.ExamProblemActivity"
-            android:exported="true">
-            
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".training_space.screen.PracticeRecentlyDefaultActivity"
             android:exported="true" />
@@ -228,16 +227,13 @@
             android:exported="true" />
         <activity
             android:name=".training_space.screen.PracticeScreenLockActivity"
-            android:exported="false" />
-        <!-- <intent-filter> -->
+            android:exported="false" /> <!-- <intent-filter> -->
         <!-- <action android:name="android.intent.action.MAIN" /> -->
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
         <activity
             android:name=".training_space.NewScreenPracticeActivity"
-            android:exported="true">
-            
-        </activity> <!-- 아이디찾기/비밀번호변경 화면 -->
+            android:exported="true"></activity> <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".home.activity.FindIdPasswordActivity"
             android:exported="true" /> <!-- 회원가입 화면 -->
