--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".training_space.google.PracticeGoogle9Activity"
+            android:exported="false" />
+        <activity
             android:name=".training_space.google.PracticeGoogle8Activity"
             android:exported="false" />
         <activity
@@ -41,7 +44,12 @@
             android:exported="false" />
         <activity
             android:name=".training_space.google.PracticeGoogleActivity"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".training_space.setting.PracticeSettingFontActivity"
