--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".training_space.naver.result.ExamNaverResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".training_space.message.result.ExamMessageResultActivity"
+            android:exported="false" />
+        <activity
             android:name=".training_space.call.problem.ExamCallResult3Activity"
             android:exported="false"
             android:label="@string/title_activity_exam_call_result3" />
@@ -33,7 +39,13 @@
             android:exported="false" />
         <activity
             android:name=".training_space.naver.PracticeNaverActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".training_space.activity.ChooseTypeActivity"
             android:exported="false" />
@@ -78,7 +90,13 @@
             android:exported="false" />
         <activity
             android:name=".training_space.message.problem.ExamMessageActivity"
-            android:exported="true" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".training_space.message.PracticeMessageActivity"
             android:exported="false" />
@@ -107,8 +125,7 @@
             android:exported="false" />
         <activity
             android:name=".training_space.call.problem.ExamCallProblemActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".training_space.call.problem.ExamCallProblem2Activity"
             android:exported="false" />
@@ -175,7 +192,7 @@
             android:exported="false" />
         <activity
             android:name=".training_space.activity.ExampleProblem5Activity"
-            android:exported="false" /> <!-- 고정 SplashActivity -->
+            android:exported="true" />
         <activity
             android:name=".home.activity.SplashActivity"
             android:exported="true" />
