--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,28 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".training_space.kakao.PracticeKakao33Activity"
+            android:exported="false" />
+        <activity
+            android:name=".training_space.kakao.PracticeKakao3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".training_space.kakao.PracticeKakao2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".training_space.kakao.PracticeKakaoActivity"
+            android:exported="false" />
+        <activity android:name=".training_space.kakao.problem.ExamKakaoProblem" />
+        <activity
+            android:name=".home.activity.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".training_space.naver.result.ExamNaverResultActivity"
             android:exported="false" />
         <activity
@@ -45,10 +67,10 @@
             android:exported="false" />
         <activity
             android:name=".training_space.naver.PracticeNaverActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".training_space.activity.ChooseTypeActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".training_space.google.PracticeGoogle9Activity"
             android:exported="false" />
@@ -90,7 +112,7 @@
             android:exported="false" />
         <activity
             android:name=".training_space.message.problem.ExamMessageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".training_space.message.PracticeMessageActivity"
             android:exported="false" />
@@ -407,11 +429,13 @@
         <activity
             android:name=".learning_space.kakaotalk.activity.KakaoChattingActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".learning_space.naver.activity.NaverSearchActivity"
