--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".training_space.default_app.camera.result.ExamCameraResultActivity"
+            android:exported="false" />
+        <activity android:name=".training_space.default_app.camera.CameraResultActivity" />
+
+        <activity
             android:name=".training_space.kakao.PracticeKakao2Activity"
             android:exported="false" />
         <activity
@@ -39,7 +44,6 @@
         <activity
             android:name=".training_space.naver.result.ExamNaverResultActivity"
             android:exported="false" />
-
         <activity
             android:name=".training_space.kakao.PracticeKakaoActivity"
             android:exported="false" />
@@ -53,9 +57,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".training_space.naver.result.ExamNaverResultActivity"
-            android:exported="false" />
         <activity
             android:name=".training_space.google.problem.ExamGoogleProblem"
             android:exported="false" />
